--- a/cg-task/src/css/MyStyle.css
+++ b/cg-task/src/css/MyStyle.css
@@ -1,6 +1,3 @@
-body{
-    padding: 10%;
-}
 .valid{
     padding: 0px 3px 0px 3px;
     background-color: rgb(41, 152, 41);
@@ -15,4 +12,30 @@ body{
 }
 td{
     text-align: left;
+}
+#timer{
+    color: brown;
+}
+/* #submit{
+    color:rgb(82, 184, 82)
+} */
+.login{
+    background-color: rgb(247, 248, 236);
+    margin-top: 4%;
+}
+
+/* navbar css starts here */
+
+#navbar{
+    display: flex;
+    gap: 2%;
+    border: 1px solid rgb(2, 2, 2);
+    background-color: rgb(192, 212, 212);
+    padding: 2px;
+}
+
+/* navbar css ends here */
+
+#home{
+    margin-top: 4%;
 }
